# p_school_placement_system

./: .gitignore  CMakeLists.txt  README.md  main.cpp  students.txt
PlacementSystem/: CMakeLists.txt  Makefile  cmake_install.cmake  placement_system.cpp  placement_system.hpp
SchoolSystem/: CMakeLists.txt  Makefile  SchoolSystem.cpp  SchoolSystem.hpp  cmake_install.cmake
assets/: defaults.py  generate_students.py  students.txt
utils/: utils.cpp
